--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dom-to-image": "^2.6.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.3",
+    "lottie-react": "^2.4.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
