Changes for vercel deployment

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "preview": "vite preview",
-    "deploy": "npm run build && gh-pages -d dist"
+    "deploy": "vercel --prod"
   },
   "author": {
     "name": "Roqeeb Olaniyi",
