Added the missing idb dependency

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@lottiefiles/dotlottie-react": "^0.17.7",
     "dom-to-image": "^2.6.0",
     "html2canvas": "^1.4.1",
+    "idb": "^8.0.0",
     "jspdf": "^3.0.3",
     "lottie-react": "^2.4.1",
     "react": "^19.1.1",
